[package]
name = "data_mine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.2"
async-recursion = "1.0.0"
serde_json = "1.0.78"
lazy_static = "1.4.0"
env_logger = "0.9.0"
crossterm = "0.23.0"
nalgebra = "0.30.1"
futures = "0.3.21"
image = "0.24.0"
ctrlc = "3.2.1"
log = "0.4.14"
tui = "0.17.0"

[dependencies.clap]
version = "3.2.5"
features = ["derive"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.9"

[dependencies.tokio]
version = "1.16.1"
features = ["full"]

[dependencies.instagram_api]
path = "../instagram_api"

[dependencies.faces]
path = "../faces"