[package]
name = "instagram_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
serde_json = "1.0.78"
regex = "1.5.4"
log = "0.4.14"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.9"
features = ["cookies", "json"]

[dependencies.tokio]
version = "1.16.1"
features = ["full"]